Fix crash when play particular presentation with sound

This fixes fdo#44533.